--- a/style.css
+++ b/style.css
@@ -142,10 +142,12 @@ h1 {
 .friendName {
   color: #dbdbdb;
   padding-left: 5px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto 0px;
   text-align: left;
   font-size: 16px;
+  grid-column: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
 
 .moneyDisplay {
