--- a/style.css
+++ b/style.css
@@ -14,45 +14,19 @@ html, body {
   color: var(--mainTextCol);
 }
 
-.normalDiv {
-  content: "";
-  display: table;
-  clear: both;
+p {
+  margin-top: 0em;
+  margin-bottom: 0em;
 }
 
 canvas {
   display: block;
 }
 
-#s_gamePage {
-  display: block;
-  height: 100vh;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 300px auto 400px;
-  grid-template-rows: 100px auto 50px;
-  height: 100vh;
-}
-
-.messagesGrid {
-  display: grid;
-  grid-template-columns: auto min-content;
-  grid-template-rows: auto 30px;
-}
-
-.darkGrey {
-  background-color: #525252;
-}
-
-.grey {
-  background-color: #5e5e5e;
-}
-
 input {
   background-color: #424242;
   width: inherit;
+  color: var(--mainTextCol);
   height: 30px;
   border-radius: 30px;
 }
@@ -64,21 +38,100 @@ button {
   padding: 3px;
 }
 
-/*************************************************************
-/*    Sidebar stuff
-*************************************************************/
-#b_home {
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
+.darkGrey {
+  background-color: #525252;
+}
+
+.grey {
+  background-color: #5e5e5e;
 }
 
 /*************************************************************
-/*    Settings stuff
+/*    Game page stuff
+*************************************************************/
+#s_gamePage {
+  height: 100vh;
+}
+
+#d_gamePageGrid {
+  display: grid;
+  grid-template-columns: 200px auto 400px;
+  grid-template-rows: 100px auto 50px;
+  height: 100vh;
+}
+
+#d_messagesGrid {
+  display: grid;
+  grid-template-columns: auto min-content;
+  grid-template-rows: auto 30px;
+}
+
+.vertCent {
+  position: absolute;
+  padding-top: 100%;
+  padding-bottom: 100%;
+}
+
+/*    Sidebar stuff    */
+.d_friendIconGrid {
+  display: grid;
+  grid-template-columns: 40px auto;
+  grid-template-rows: auto auto;
+  height: 40px;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  float: left;
+  margin: 5px;
+}
+
+.friendName {
+  padding-left: 5px;
+  vertical-align: bottom;
+  font-size: 14px;
+}
+
+.lastOnline {
+  padding-left: 5px;
+  font-size: 11px;
+}
+
+.friendRequestButton {
+  display: inline;
+  vertical-align: top;
+  padding-top: 2px;
+  padding-bottom: 0px;
+  font-size: 11px;
+}
+/*************************************************************
+/*    Register page stuff
+*************************************************************/
+#s_register {
+  position: fixed;
+  top: 5vh;
+  left: 5vw;
+}
+
+#d_registerGrid {
+  display: grid;
+  grid-template-columns: auto 500px auto;
+  grid-template-rows: auto;
+  height: 90vh;
+  width: 90vw;
+}
+
+/*************************************************************
+/*    Settings page stuff
 *************************************************************/
 #s_settingsPage {
-  display: none;
   position: fixed;
+  top: 5vh;
+  left: 5vw;
 }
+
 /*************************************************************
 /*    END OF CSS
 *************************************************************/
