--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ button {
 *************************************************************/
 #s_landingPage {
   height: 100vh;
+  display: none;
 }
 
 #d_landingPageGrid {
@@ -64,12 +65,13 @@ button {
 *************************************************************/
 #s_gamePage {
   height: 100vh;
+  display: none;
 }
 
 #d_gamePageGrid {
   display: grid;
   grid-template-columns: 200px auto 400px;
-  grid-template-rows: 100px auto 50px;
+  grid-template-rows: 50px minmax(0, 1fr) 50px;
   height: 100vh;
 }
 
@@ -79,12 +81,19 @@ button {
   grid-template-rows: auto 30px;
 }
 
+.d_message {
+  display: grid;
+  grid-template-columns: 40px auto;
+  grid-template-rows: 20px auto;
+  margin: 3px;
+}
+
 /*    Sidebar stuff    */
 .d_friendIconGrid {
   display: grid;
   grid-template-columns: 40px auto;
   height: 40px;
-  width: 100%;
+  width: -webkit-fill-available;
   margin: 3px;
   padding: 0px;
   border-radius: 40px;
@@ -104,7 +113,7 @@ button {
   grid-template-columns: 40px auto;
   grid-template-rows: 20px 20px;
   height: 40px;
-  width: 100%;
+  width: -webkit-fill-available;
   margin: 3px;
   padding: 0px;
   border-radius: 40px;
@@ -127,16 +136,12 @@ button {
 }
 
 .friendName {
+  color: #dbdbdb;
   padding-left: 5px;
   margin-top: auto;
   margin-bottom: auto;
   text-align: left;
   font-size: 16px;
-}
-
-.lastOnline {
-  padding-left: 5px;
-  font-size: 11px;
 }
 
 .friendRequestButton {
@@ -151,6 +156,7 @@ button {
 *************************************************************/
 #s_register {
   position: fixed;
+  display: none;
   top: 5vh;
   left: 5vw;
 }
@@ -168,10 +174,18 @@ button {
 *************************************************************/
 #s_settingsPage {
   position: fixed;
+  display: none;
   top: 5vh;
   left: 5vw;
 }
 
+#d_settingsGrid {
+  display: grid;
+  grid-template-columns: auto 500px auto;
+  grid-template-rows: auto;
+  height: 90vh;
+  width: 90vw;
+}
 /*************************************************************
 /*    Admin page and button styling
 *************************************************************/
@@ -187,6 +201,27 @@ button {
 
 #b_gpAdmin {
   display: none;   /* none = don't display element */
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #5e5e5e;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #525252;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #464646;
 }
 
 /*************************************************************
